# ARM_Presentation

./: .gitignore  Makefile  README.md  extension.c
extension/: convert_to_ppm.sh  extension.c
extension/pico_files/include/: lwipopts.h
extension/pico_files/src/display/: st7789.h  xpt2046.c  xpt2046.h
extension/pico_files/src/network/: udp_handler.c  wifi_handler.h
extension/src/: plant_health.c  plant_health.h  scoring_algorithm.c  scoring_algorithm.h  texture_analysis.c  texture_analysis.h  utils.c  utils.h
extension/test_suite/: Makefile
extension/test_suite/images/ppm/: leaf02.ppm  leaf03.ppm  leaf05.ppm  leaf07.ppm  leaf12.ppm  leaf13.ppm
pico_files/: CMakeLists.txt
pico_files/src/: config.h  main.c
pico_files/src/network/: udp_handler.c  udp_handler.h  wifi_handler.c
sensors/: sensors.c  sensors.h
test_suite/: test_batch.c  test_batch.h
test_suite/images/ppm/: leaf04.ppm  leaf06.ppm  leaf10.ppm  leaf14.ppm
